--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,9 +17,11 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-    viewBinding {
-        enabled = true
+
+    buildFeatures {
+        viewBinding = true
     }
+
     buildTypes {
         release {
             minifyEnabled false
