--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,11 @@ android {
 }
 
 dependencies {
-    def fragment_version = "1.5.5"
-
+    implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
+    implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
+    implementation 'com.google.android.material:material:1.8.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+    def fragment_version = "1.5.5"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
     implementation 'com.google.android.material:material:1.8.0'
     implementation "androidx.core:core-ktx:1.9.0"
