--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,8 +42,8 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
     implementation 'com.google.android.material:material:1.8.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
-    def fragment_version = "1.5.5"
-    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
+    implementation "androidx.fragment:fragment-ktx:1.5.5"
     implementation 'com.google.android.material:material:1.8.0'
     implementation "androidx.core:core-ktx:1.9.0"
     implementation 'androidx.appcompat:appcompat:1.6.1'
