--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         <activity
             android:name=".root.ui.MainActivity"
             android:exported="true"
-            android:windowSoftInputMode="adjustNothing">
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,6 +28,7 @@
         </activity>
         <activity
             android:name=".player.ui.AudioPlayerActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="false" />
     </application>
 
